# erasmus

./: .architecture.md  .coverage  .cursorrules  .cursorrules.old  .env.example  .gitignore  .progress.md  .tasks.md  .windsurfrules  .windsurfrules.old  ARCHITECTURE.md  LICENSE  None  PROGRESS.md  README.md  TASKS.md  architecture.md  build_installer.sh  bundler.py  cleanup.sh  embed_erasmus.py  erasmus.py  erasmus_bundled.py  global_rules.md  input.py  install.bat  install.sh  install.sh.new  launcher.sh  main.py  output  output.txt  package.json  pyproject.toml  python-sdk  test.py  test_imports.py  test_imports_bundled.py  test_installer.sh  test_invalid.packaged.py  (+10 more)
.context/Agent-Code_Linting_and_Style/: architecture.md
.context/Agent-Debugging_Assistant/: architecture.md  progress.md  tasks.md
.context/Agent-Project_Owner/: architecture.md
.context/Project-uv_packager/: architecture.md  progress.md  tasks.md
.deprecicated/: .architecture.md  ARCHITECTURE.md  PROGRESS.md  TASKS.md  batch_script_generator.py  build_installer.sh  build_release.py  embed_erasmus.py  erasmus.py  get_openai_creds.py  global_rules.md  launcher.sh  main.py  script_converter.py  test_installer.sh  verify_extraction.sh  version_manager.py
.deprecicated/tests/: test_main.py  test_version_manager.py  test_watcher.py
.erasmus/: .architecture.md  .progress.md  architecture.md  context.json  mcp_config.json
.erasmus/context/: .architecture.md  .progress.md  .tasks.md
.erasmus/mcp/: mcp_config.json
.erasmus/protocols/: agent_registry.json  registry.json
.erasmus/review/: README.md  action_plan.md  code_review_report.md  dependencies.md  dependency_graph.md  draft.md  final_report.md  progress.md  summary.md  target_functionality.md
.erasmus/templates/: architecture.xml  meta_agent.md  meta_agent.xml  meta_rules.md  meta_rules.xml  protocol.xml
.temp_context/Erasmus-documenation/: ctx.progress.xml  ctx.tasks.xml
.temp_context/Erasmus_Documentation_-_Context_and_Protocol_Management_Library/: ctx.architecture.xml
docs/: API_REFERENCE.md  CLI_COMMANDS.md  INTEGRATION_GUIDE.md  MakingMCPCalls.md
docs/api/: core.md
docs/guides/: integration.md
erasmus/: README.md  __init__.py  __main__.py  api_client.py  context.py  environment.py  erasmus.py  file_monitor.py  file_monitor.py.bak  inference.py  mcp_client.py  protocol.py  pyproject.toml  tool_router.py
erasmus/cli/: __init__.py  commands.py  context_commands.py  environment_commands.py  github_mcp_commands.py  main.py  mcp_commands.py  protocol.py  protocol_commands.py  setup.py  setup_commands.py
erasmus/cli/tests/: test_github_mcp_commands.py
erasmus/core/: context.py  cursor_integration.py  dynamic_updates.py  ide_integration.py  rule_applicator.py  rules.py  rules_parser.py  task.py  watcher.py
erasmus/git/: manager.py
erasmus/ide/: __init__.py  cursor_integration.py  sync_integration.py
erasmus/logging/: index.ts
erasmus/mcp/: client.py  mcp.py  models.py  registry.py  servers.py
erasmus/sync/: __init__.py  file_sync.py
erasmus/tests/: test_mcp_registry.py
erasmus/tests/mcp/: mcp_test_client.py  mcp_test_server.py
erasmus/tools/: __init__.py  handler.py
erasmus/utils/: __init__.py  context.py  env_manager.py  file.py  file_ops.py  logging.py  path_constants.py  paths.py  protocol.py  protocols.py  rich_console.py  sanatizer.py  type_conversions.py  warp_integration.py  xml_parser.py
erasmus/utils/protocols/: __init__.py  agent_registry.json  agent_workflow.md  base.py  cli.py  context.py  dependency.md  documentation.md  example.py  integration.py  manager.py  orchestration.md  product_owner.md  protocol_cli.py  server.py  testing.md
erasmus/utils/protocols/stored/: CI_CD Agent.md  Code Review Agent.md  Debug Agent.md  Dependency Agent.md  Developer Agent.md  Documentation Agent.md  Orchestration Agent.md  Performance Agent.md  Product Owner Agent.json  Product Owner Agent.md  Security Agent.md  Style Agent.md  Testing Agent.md  agent_workflow.md  code_review.md  debugging.md  developer.md  documentation.md  performance.md  product_owner.md  security.md  style.md  testing.md
gamesync_demo/: README.md
packager/: README.md  __init__.py  __main__.py  builder.py  bundler.py  collector.py  embedder.py  file_order.py  import_manager.py  inliner.py  mapping.py  parser.py  paths.py  pyproject.toml  stdlib.py  uv_wrapper.py  visualizer.py
packager/utils/: rich_console.py
release/: erasmus_v0.0.1.bat  erasmus_v0.1.0.sh
release/v0.0.1/: erasmus_v0.0.1.bat  erasmus_v0.0.1.sh  erasmus_v0.0.1.sha256
release/v0.0.2/: erasmus_v0.0.2.sh  erasmus_v0.0.2.sha256
releases/: install.sh
releases/0.0.1/: erasmus_v0.0.1.py  erasmus_v0.0.1.sh
releases/0.1.0/: erasmus_v0.1.0.py  erasmus_v0.1.0.sh
releases/0.2.0/: erasmus_v0.2.0.py  erasmus_v0.2.0.sh
scripts/: build_installer.sh  cleanup.sh  embed_erasmus.py  install.sh  package_and_build.sh  setup_gamesync_demo.sh  update_readme.py  walk.py
scripts/test/: test_installer.sh
src/: __main__.py  batch_script_generator.py  build_release.py  builder.py  collector.py  embed_erasmus.py  get_openai_creds.py  mapping.py  packager.py  parser.py  script_converter.py  stdlib.py  uv_wrapper.py  version_manager.py
src/utils/: context.py
templates/: architecture.md  progress.md  tasks.md
tests/: conftest.py  test_basic.py  test_collector.py  test_context.py  test_environment.py  test_file_monitor.py  test_file_sync.py  test_git_commits.py  test_git_manager.py  test_main.py  test_packager.py  test_packager_mapping.py  test_protocol.py  test_stdlib.py  test_tree_sitter_parser.py  test_utils.py  test_uv_wrapper.py  test_watcher.py
tests/benchmarks/: test_memory_usage.py  test_sync_performance.py
tests/cli/: test_setup.py
tests/core/: test_context.py  test_dynamic_updates.py  test_rule_applicator.py  test_rules.py  test_rules_parser.py  test_task.py  test_watcher.py  test_watcher_integration.py
tests/ide/: test_cursor_integration.py  test_sync_integration.py
tests/packager/: test_builder.py  test_cli.py  test_collector.py  test_indentation.py  test_main.py  (+4 more)
(+47 files in other folders)
