[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erasmus"
version = "0.1.0"
description = "A context watcher for cursor and windsurf"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Bakobi", email = "bakobiibizo@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "typing-extensions>=4.0.0",
    "click>=8.1.0",
    "pygame>=2.6.1",
    "rustworkx>=0.16.0",
    "redis>=5.2.1",
    "react>=4.3.0",
    "three>=0.8.0",
    "pandas>=2.2.3",
]

[project.scripts]
erasmus = "erasmus.cli.commands:cli"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.95.0",
]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["erasmus"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=erasmus --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["erasmus"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.uv.workspace]
members = ["gamesync_demo"]

[tool.uv.sources]
erasmus = { workspace = true }

[dependency-groups]
dev = [
    "erasmus",
]
