[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erasmus"
version = "0.1.0"
description = "Context manager for development projects"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[tool.hatch.build.targets.wheel]
packages = ["erasmus"] 